--- a/Página Web/Login/style.css
+++ b/Página Web/Login/style.css
@@ -15,15 +15,88 @@ body
 	flex-direction: column;
 	background: #23242a;
 }
+body.dark {
+	background:lavender;
+}
+
+body.dark form{
+	background: lavender;
+}
+
+body.dark form h2{
+	color:#23242a;
+}
+body.dark .inputBox span
+{
+	color: #464646;
+}
+body.dark .signup a{
+	color: #000000;
+}
+
+
+
+/* botón tema oscuro/claro */
+.switch{
+	background: #45f3ff;
+	border-radius: 1000px;
+	border:none;
+	position: relative;
+	cursor: pointer;
+	display: flex;
+	outline: none;
+	margin-top: -30px;
+	margin-bottom: 30px;
+}
+.switch span{
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: none;
+}
+.switch ::after{
+	content: "";
+	display: block;
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	background: #fff;
+	top: 0;
+	left: 0;
+	right: unset;
+	border-radius: 100px;
+	transition: .3s ease all;
+	box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+}
+.switch.active {
+	background: #252525;
+	color:#fff;
+}
+
+.switch.active ::after{
+	right: 0;
+	left: unset;
+}
+.switch span:nth-of-type(2) i{
+	color: #1c1c1c;
+}
+
+.switch i{
+	font-size: 17px;
+}
 .box 
 {
 	position: relative;
 	width: 380px;
 	height: 420px;
-	background: #1c1c1c;
+	background: #464646;
 	border-radius: 8px;
 	overflow: hidden;
 }
+
 .box::before 
 {
 	content: '';
@@ -37,6 +110,7 @@ body
 	background: linear-gradient(0deg,transparent,#45f3ff,#45f3ff);
 	animation: animate 6s linear infinite;
 }
+
 .box::after 
 {
 	content: '';
@@ -51,6 +125,8 @@ body
 	animation: animate 6s linear infinite;
 	animation-delay: -3s;
 }
+
+
 @keyframes animate 
 {
 	0%
@@ -120,6 +196,7 @@ h2
 	transform: translateX(2px) translateY(-34px);
 	font-size: 0.75em;
 }
+
 .inputBox i 
 {
 	position: absolute;
